[gd_scene load_steps=2 format=3 uid="uid://ccay78xjx1ksa"]

[ext_resource type="Script" path="res://setting.gd" id="1_uutsl"]

[node name="Setting" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uutsl")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(0.47, 0.47)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "设置"
horizontal_alignment = 1

[node name="GraphicLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "画面"
horizontal_alignment = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "分辨率"

[node name="OptionButton" type="OptionButton" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 7.0
item_count = 3
popup/item_0/text = "1920x1080"
popup/item_1/text = "1600x900"
popup/item_1/id = 1
popup/item_2/text = "1280x720"
popup/item_2/id = 2

[node name="HBoxContainer4" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "全屏幕显示"

[node name="CheckButton" type="CheckButton" parent="MarginContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 7.0

[node name="AudioLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "声音"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "背景音乐"

[node name="MusicVolume" type="HSlider" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 7.0
min_value = -50.0
max_value = 50.0

[node name="MuteMusicCheckBox" type="CheckBox" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "静音"
alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "音效"

[node name="SoundVolume" type="HSlider" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 7.0
min_value = -50.0
max_value = 50.0

[node name="MuteSoundCheckBox" type="CheckBox" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "静音"
alignment = 1

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 30
text = "返回"

[connection signal="item_selected" from="MarginContainer/VBoxContainer/HBoxContainer3/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/HBoxContainer4/CheckButton" to="." method="_on_check_button_toggled"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/HBoxContainer/MusicVolume" to="." method="_on_music_volume_value_changed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/HBoxContainer/MuteMusicCheckBox" to="." method="_on_mute_music_check_box_toggled"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/HBoxContainer2/SoundVolume" to="." method="_on_sound_volume_value_changed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/HBoxContainer2/MuteSoundCheckBox" to="." method="_on_mute_sound_check_box_toggled"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
